# django_clone_practice_v2

./: pyproject.toml
config/: settings.py  urls.py
tweets/: admin.py  models.py  tests.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py
tweets/templates/: all_tweets.html  tweet.detail.html
users/: urls.py  views.py
users/migrations/: 0001_initial.py
